fix: autocompletion menus from monaco were cropped due to overflow setting on the parent

--- a/src/webviews/documentdb/collectionView/components/queryEditor/queryEditor.scss
+++ b/src/webviews/documentdb/collectionView/components/queryEditor/queryEditor.scss
@@ -30,7 +30,6 @@
     row-gap: 10px;
     width: 100%; // Ensure full width
     max-width: 100%; // Prevent overflow
-    overflow: hidden; // Prevent content from overflowing
 
     /**
      * Filter Row
